# fastAPI-and-repository-pattern

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: car.py  manufacturer.py
app/core/: config.py  errors.py  exception_handlers.py  logging.py  rate_limit.py  settings.py
app/db/: base.py  session.py
app/docker/: api.dockerfile
app/models/: car.py  manufacturer.py
app/repositories/: base.py  sqlalchemy_repository.py
app/schemas/: car.py  manufacturer.py  pagination.py
app/services/: cars.py  manufacturers.py
database/: Dockerfile.data_insertion  data_insertion.py  init_db.sql
database/data_insertion/: Dockerfile.data_insertion  data_insertion.dockerfile  data_insertion.py  models.py  pyproject.toml  utils.py
tests/: test_sqlalchemy_car_repository.py  test_sqlalchemy_manufacturer_repository.py
